[gd_scene load_steps=13 format=3 uid="uid://dy8cbacb7masc"]

[ext_resource type="Script" path="res://main_game_loop.gd" id="1_5w5nb"]
[ext_resource type="Texture2D" uid="uid://cxwmab7d14kbv" path="res://Playing Cards/card-back4.png" id="1_fm0kk"]
[ext_resource type="Script" path="res://Deck.gd" id="2_eoudt"]
[ext_resource type="Script" path="res://Label.gd" id="6_3gdv3"]
[ext_resource type="Script" path="res://AnimationPlayer.gd" id="6_eggow"]
[ext_resource type="Script" path="res://LineEdit.gd" id="7_jbdvw"]
[ext_resource type="Script" path="res://Button.gd" id="7_u6ct1"]
[ext_resource type="Script" path="res://HouseDraw.gd" id="8_j5ksm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktl37"]
size = Vector2(97, 145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5chn8"]
size = Vector2(96, 145)

[sub_resource type="Curve2D" id="Curve2D_g8apv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1446, 150.688, 0, 0, 0, 0, 654.915, 898.653)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_nlfwf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1446, 182, 0, 0, 0, 0, 520, 101)
}
point_count = 2

[node name="MainGameLoop" type="Node2D"]
script = ExtResource("1_5w5nb")

[node name="Deck" type="Area2D" parent="."]
position = Vector2(1446, 182)
script = ExtResource("2_eoudt")

[node name="DeckSprite" type="Sprite2D" parent="Deck"]
texture = ExtResource("1_fm0kk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ktl37")

[node name="PlayerHand" type="Area2D" parent="."]
position = Vector2(653, 898)

[node name="Card1" type="Sprite2D" parent="PlayerHand"]

[node name="Card2" type="Sprite2D" parent="PlayerHand"]
position = Vector2(110, 0)

[node name="Card3" type="Sprite2D" parent="PlayerHand"]
position = Vector2(220, 0)

[node name="Card4" type="Sprite2D" parent="PlayerHand"]
position = Vector2(330, 0)

[node name="Card5" type="Sprite2D" parent="PlayerHand"]
position = Vector2(440, 0)

[node name="Card6" type="Sprite2D" parent="PlayerHand"]
position = Vector2(550, 0)

[node name="Card7" type="Sprite2D" parent="PlayerHand"]
position = Vector2(660, 0)

[node name="Card8" type="Sprite2D" parent="PlayerHand"]
position = Vector2(770, 0)

[node name="Card1Coll" type="CollisionShape2D" parent="PlayerHand"]
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card2Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(110, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card3Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(220, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card4Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(330, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card5Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(440, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card6Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(550, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card7Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(660, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="Card8Coll" type="CollisionShape2D" parent="PlayerHand"]
position = Vector2(770, 0)
shape = SubResource("RectangleShape2D_5chn8")

[node name="PlayerDrawAnim" type="Path2D" parent="."]
position = Vector2(-6, 36)
scale = Vector2(1.00471, 0.958101)
curve = SubResource("Curve2D_g8apv")

[node name="AnimationPlayer" type="PathFollow2D" parent="PlayerDrawAnim"]
position = Vector2(1446, 150.688)
rotation = 2.3842
script = ExtResource("6_eggow")

[node name="Sprite2D" type="Sprite2D" parent="PlayerDrawAnim/AnimationPlayer"]
rotation = -2.38412
texture = ExtResource("1_fm0kk")

[node name="HouseDrawAnim" type="Path2D" parent="."]
curve = SubResource("Curve2D_nlfwf")

[node name="HouseDraw" type="PathFollow2D" parent="HouseDrawAnim"]
position = Vector2(1446, 182)
rotation = -3.05434
script = ExtResource("8_j5ksm")

[node name="Sprite2D" type="Sprite2D" parent="HouseDrawAnim/HouseDraw"]
rotation = 3.05433
texture = ExtResource("1_fm0kk")

[node name="ScoreBoard" type="Label" parent="."]
offset_left = 233.0
offset_top = 173.0
offset_right = 326.0
offset_bottom = 302.0
script = ExtResource("6_3gdv3")

[node name="Button" type="Button" parent="."]
offset_left = 439.0
offset_top = 825.0
offset_right = 560.0
offset_bottom = 872.0
action_mode = 0
text = "Hold"
script = ExtResource("7_u6ct1")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 441.0
offset_top = 938.0
offset_right = 554.0
offset_bottom = 971.0
placeholder_text = "Amount"
alignment = 1
script = ExtResource("7_jbdvw")

[node name="Label2" type="Label" parent="LineEdit"]
layout_mode = 0
offset_left = 32.0
offset_top = -30.0
offset_right = 82.0
offset_bottom = -7.0
text = "Bet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HouseHand" type="Node2D" parent="."]
position = Vector2(519, 99)

[node name="Card1" type="Sprite2D" parent="HouseHand"]
position = Vector2(0, -1)

[node name="Card2" type="Sprite2D" parent="HouseHand"]
position = Vector2(110, -1)

[node name="Card3" type="Sprite2D" parent="HouseHand"]
position = Vector2(220, -1)

[node name="Card4" type="Sprite2D" parent="HouseHand"]
position = Vector2(330, -1)

[node name="Card5" type="Sprite2D" parent="HouseHand"]
position = Vector2(440, -1)

[node name="Card6" type="Sprite2D" parent="HouseHand"]
position = Vector2(550, -1)

[node name="Card7" type="Sprite2D" parent="HouseHand"]
position = Vector2(660, -1)

[node name="Card8" type="Sprite2D" parent="HouseHand"]
position = Vector2(770, -1)

[connection signal="DrawnCardScore" from="." to="ScoreBoard" method="_on_main_game_loop_drawn_card_score"]
[connection signal="DrawnCardScoreHouse" from="." to="ScoreBoard" method="_on_main_game_loop_drawn_card_score_house"]
[connection signal="HouseHandFull" from="." to="HouseDrawAnim/HouseDraw" method="_on_main_game_loop_house_hand_full"]
[connection signal="NewGame" from="." to="ScoreBoard" method="_on_main_game_loop_new_game"]
[connection signal="PlayAnimation" from="." to="PlayerDrawAnim/AnimationPlayer" method="_on_main_game_loop_play_animation"]
[connection signal="PlayAnimationHouse" from="." to="HouseDrawAnim/HouseDraw" method="_on_main_game_loop_play_animation_house"]
[connection signal="PlayerHandFull" from="." to="PlayerDrawAnim/AnimationPlayer" method="_on_main_game_loop_player_hand_full"]
[connection signal="Click_On_Deck" from="Deck" to="." method="_on_deck_click_on_deck"]
[connection signal="mouse_entered" from="Deck" to="Deck" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Deck" to="Deck" method="_on_mouse_exited"]
[connection signal="card_move_finish" from="PlayerDrawAnim/AnimationPlayer" to="." method="_on_animation_player_card_move_finish"]
[connection signal="card_move_finish" from="HouseDrawAnim/HouseDraw" to="." method="_on_house_draw_card_move_finish"]
[connection signal="BetPlaced" from="ScoreBoard" to="." method="_on_label_bet_placed"]
[connection signal="GameLost" from="ScoreBoard" to="." method="_on_score_board_game_lost"]
[connection signal="GameWon" from="ScoreBoard" to="." method="_on_score_board_game_won"]
[connection signal="ButtonPressed" from="Button" to="." method="_on_button_button_pressed"]
[connection signal="text_submitted" from="LineEdit" to="ScoreBoard" method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
